# pi_learning_for_collaborative_carrying

./: .gitignore  README.md  environment.yml  setup.cfg
config/: config_mann.toml
datasets/collaborative_payload_carrying/: description.txt
human_model/: humanSubjectWithMesh.urdf
misc/: HumanStateVisualizer_ergoCub_ifeel.ini  RobotStateProvider_ergoCub_ifeel.xml
scripts/: convert_to_onnx.py  feature_extraction.py  interpolate_vive_data.py  parse_ifeel_data.py  parse_vive_data.py  play_retargeted_mocap.py  retarget_onto_robot.py  training.py  trajectory_generation.py  trajectory_generation_raw.py
src/pi_learning_for_collaborative_carrying/data_processing/: data_converter.py  feature_extractor.py  ifeel_data_retargeter.py  motion_data.py  qpik.toml  qpik_follower.toml  qpik_leader.toml  utils.py  xsens_data_converter.py
src/pi_learning_for_collaborative_carrying/mann_pytorch/: DataHandler.py  GatingNetwork.py  MANN.py  MotionPredictionNetwork.py
src/pi_learning_for_collaborative_carrying/model/ergoCubGazeboV1_xsens/: ergoCubGazeboV1_xsens.urdf
src/pi_learning_for_collaborative_carrying/trajectory_generation/: DualVisualizer.py  URDFVisualizer.py  utils.py
