# SPDX-FileCopyrightText: Fondazione Istituto Italiano di Tecnologia
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = pi_learning_for_collaborative_carrying
version = 1.0
description = Physics-informed trajectory generator for collaborative payload carrying for humanoid robots.
author = Evelyn D'Elia
author_email = evelyn.delia@iit.com
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/evelyd/pi_learning_for_collaborative_carrying

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6

install_requires =
    wget

[options.packages.find]
where = src
